test/gator/bench/both/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-image
  namespace: default
spec:
  containers:
    - name: app
      image: gcr.io/myproject/myapp:v1.0
---
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-image
  namespace: default
spec:
  containers:
    - name: app
      image: quay.io/unauthorized/app:latest
